<resources>
    <string name="app_name">Plaztigram</string>
    <string name="title_activity_referencia">ReferenciaActivity</string>
    <string name="hint_username">User name</string>
    <string name="hint_password">Password</string>
    <string name="text_button_login">Login</string>
    <string name="dont_have_account">Don\'t have account, </string>
    <string name="create_here">Create here</string>
    <string name="hint_mail">Mail</string>
    <string name="hint_name">Name</string>
    <string name="hint_user">User</string>
    <string name="hint_confirm_password">Confirm password</string>
    <string name="text_button_join">Join us</string>
    <string name="toolbar_title_create_account">Create account</string>
    <string name="username_card">Paul Alarcon</string>
    <string name="firstword_card">Since</string>
    <string name="time_card">4 days</string>
    <string name="like_number">Like me</string>
    <string name="tab_search">Search</string>
    <string name="tab_home">Home</string>
    <string name="tab_profile">Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="titleImageDetail">Atardecer</string>
    <string name="detailImagetText">Este es el texto de prueba del contenido que tiene esta imagen descrita  con todos las caracteristicas que esta
    pudiera tener en un determinado momento para que no pueda desbordar la imagen el activity</string>
    <string name="transitionname_picture">transitionnamepicture</string>
</resources>
